--- a/Engg/Engg.vcxproj.filters
+++ b/Engg/Engg.vcxproj.filters
@@ -7,6 +7,12 @@
     <Filter Include="Engg\Events">
       <UniqueIdentifier>{6AC8F451-D67D-6D47-5F72-671ECB26644B}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engg.h" />
@@ -34,6 +40,13 @@
     <ClInclude Include="src\Engg\Log.h">
       <Filter>Engg</Filter>
     </ClInclude>
+    <ClInclude Include="src\Engg\Window.h">
+      <Filter>Engg</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="src\enpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engg\Application.cpp">
@@ -42,5 +55,9 @@
     <ClCompile Include="src\Engg\Log.cpp">
       <Filter>Engg</Filter>
     </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="src\enpch.cpp" />
   </ItemGroup>
 </Project>
